src/objects/SomDig_Zahlungsbedingung__c.object
<CustomObject>
    <description>Nimmt die möglichen Zahlungsbedingungen auf um die in der Medienkampagne gewählten Zahlungsbedingungen korrekt an SAP übergeben zu können.
Erfasst werden Prozentangaben Skonto, Zahlungsbedingungstext, SAP-Code (Bezeichner)</description>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_SAPCode__c</fullName>
        <description>Eingabemöglichkeit für den Zahlungsbedingungs-Kennzeichen innerhalb von SAP.
Diese Information muss  mit SAP übereinstimmen und abgestimmt sein, dieses Feld wird bei der Übergabe von ADvendio zu SAP Fi/Co verwendet.</description>
        <inlineHelpText>Eingabemöglichkeit für den Zahlungsbedingungs-Kennzeichen innerhalb von SAP.
Diese Information muss  mit SAP übereinstimmen und abgestimmt sein, dieses Feld wird bei der Übergabe von ADvendio zu SAP Fi/Co verwendet.</inlineHelpText>
        <label>SAP-Code</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SomDig_Skontowert__c</fullName>
        <description>Bitte hier den Wert für einen möglicherweise gewährten Skontosatz angeben.</description>
        <inlineHelpText>Bitte hier den Wert für einen möglicherweise gewährten Skontosatz angeben.</inlineHelpText>
        <label>Skontowert</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomDig_TageNetto__c</fullName>
        <description>Ist eine Kopie des Advendio-Feldes &quot;DaysNet&quot; aus dem Objekt &quot;Terms of Payment&quot;, da wir unseres benutzerdefiniertes Objekt benutzen möchten, aber diesen Wert im/für Rechnungsstellung und vorher BA-Mapping benötigen (siehe auch KV 1348)</description>
        <inlineHelpText>Zahlungsziel: Innerhalb wie vieler Tage muss der Kunden zahlen ohne Abzug des Skontowertes (also den MN2-Betrag)</inlineHelpText>
        <label>Tage Netto</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomDig_TageSkonto__c</fullName>
        <description>Ist eine Kopie des Advendio-Feldes &quot;DaysEarlyPaymentDiscount&quot; aus dem Objekt &quot;Terms of Payment&quot;, da wir unseres benutzerdefiniertes Objekt benutzen möchten, aber diesen Wert im/für Rechnungsstellung und vorher BA-Mapping benötigen (siehe auch KV 1348)</description>
        <inlineHelpText>Zahlungsziel: Innerhalb wie vieler Tage kann der Kunden zahlen mit Abzug des Skontowertes (also den MN3-Betrag)</inlineHelpText>
        <label>Tage Skonto</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomDig_ZahlungsbedingungEnglisch__c</fullName>
        <label>Zahlungsbedingung (Englisch)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Zahlungsbedingung</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SomDig_ZahlungsbedingungEnglisch__c</columns>
        <columns>SomDig_SAPCode__c</columns>
        <columns>SomDig_Skontowert__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <nameField>
        <label>Zahlungsbedingung-Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zahlungsbedingungen</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>